# kor-travel-docker-manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  SKILL.md  antigravity.json  claude.json  codex.json  docker-compose.yml  opencode.json
.codex/: config.toml
.gemini/: mcp.json
backend/: pyproject.toml
backend/src/kor_travel_docker_manager/: _time.py  cli.py  database.py  main.py  models.py
backend/src/kor_travel_docker_manager/api/: admin.py  auth.py  routes.py  security.py  websocket.py
backend/src/kor_travel_docker_manager/services/: auth_service.py  c6c_deployment.py  c6c_image_retention.py  compose_service.py  docker_service.py  metrics_collector.py  metrics_service.py  public_api_key_service.py  registry.py
backend/src/tripmate_manager/: cli.py  database.py  main.py
backend/src/tripmate_manager/api/: routes.py  websocket.py
backend/src/tripmate_manager/services/: compose_service.py  docker_service.py  metrics_collector.py  metrics_service.py  registry.py
backend/tests/: test_api.py  test_c6c_deployment.py  test_c6c_image_retention.py  test_docker_manager_cli.py  test_docker_service_config.py  test_metrics.py
config/: docker-targets.yml
docs/: DESIGN-RULES.md  architecture.md  decisions.md  design-system.md  dev-environment.md  docker-management.md  journal.md  ports.md  prod-deployment.md  tasks-done.md  tasks.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
scripts/: ensure-kor-travel-geo-db.sh  ensure-kraddr-geo-db.sh  ensure-rustfs-buckets.sh  infra.sh  init-kor-travel-geo.sql  (+4 more)
(+13 files in other folders)
