[tool.poetry]
name = "tripmate-manager-backend"
version = "0.1.0"
description = "FastAPI backend for managing PostgreSQL and RustFS docker containers"
authors = ["digitie <digitie@gmail.com>"]
readme = "../README.md"
packages = [{include = "tripmate_manager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
docker = "^7.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
websockets = "^12.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501", "E402"]
